gui/admin-gui/src/frontend/scss/_midpoint.scss
/* ... */
.fw-semibold {
  font-weight: 600 !important;
}

.text-help > p {
  margin-bottom: .25rem;
}

.right-sidebar-help {
  @extend .bg-white;
  @extend .border-start;
  width: 350px;

  > .header {
    @extend .border-bottom;
    @extend .p-3;
  }

  > .body {
    @extend .p-3;
  }
}

//Wizard stepper button navigation scaling
.wizard-actions-strip {
  .wizard-actions-container {
    flex-shrink: 1;
    flex-grow: 0;

    &:first-child {
      flex-grow: 1;
    }

    &:only-child {
      flex-grow: 1;
    }
    &:last-child, &:only-child {
      display: flex;
      justify-content: flex-end;
    }
  }
  &.only-child-centered .wizard-actions-container {
    &:only-child {
      display: flex;
      justify-content: center;
    }
  }
  &.only-child-start .wizard-actions-container {
      &:only-child {
        display: flex;
        justify-content: left;
      }
    }
}

.prism-property-value-label {
  white-space: pre-wrap;
  overflow-wrap: anywhere;
}

.info-box-progress-bar {
    background-color: #fff;
}

@media (min-width: 992px) {
    .table-responsive {
        overflow: visible !important;
    }
}

